tests/lexer/invalid/test_numbers.src
// Тест 12: Числа с проверкой границ
42              // OK
2147483647      // OK
2147483648      // ОШИБКА
-2147483648     // OK
-2147483649     // ОШИБКА
3.14            // OK